feat. quantity changeable
