# backend/src/controller/shoppingLists.controller.ts
@@ -1,9 +1,12 @@
 import { Request, Response } from 'express';
 import { ShoppingListsRepository } from '../database/repository/shoppingLists.repository';
-import { associateItemsWithShoppingListSchema, createShoppingListZodSchema } from '../validation/validation';
-import { updateShoppingListZodSchema } from '../validation/validation';
+import {
+  associateItemsWithShoppingListSchema,
+  createShoppingListZodSchema,
+  updateShoppingListZodSchema,
+} from '../validation/validation';
 import { ItemsRepository } from '../database/repository/items.repository';
-import {validate as isUUID } from 'uuid';
+import { validate as isUUID } from 'uuid';
 
 export class ShoppingListsController {
   constructor(
@@ -27,7 +30,7 @@ export class ShoppingListsController {
   }
 
   async getShoppingLists(req: Request, res: Response): Promise<void> {
-    console.log("getShoppingLists called");
+    console.log('getShoppingLists called');
     const shoppingLists = await this.shoppingListsRepository.getShoppingLists();
     res.status(200).send(shoppingLists);
   }
@@ -38,26 +41,34 @@ export class ShoppingListsController {
     //TODO fix irgendwie
     //const validatedData = createShoppingListZodSchema.parse(req.body); //eigentlich richtiger weg aber jest sagt nein
     try {
-       validatedData = createShoppingListZodSchema.parse(req.body);
-    }
-    catch (e) {
-      console.log("error: ", e);
+      validatedData = createShoppingListZodSchema.parse(req.body);
+    } catch (e) {
+      console.log('error: ', e);
       res.status(400).send();
       return;
     }
-    const exists = await this.shoppingListsRepository.shoppingListExistsByName(validatedData.name);
+    const exists = await this.shoppingListsRepository.shoppingListExistsByName(
+      validatedData.name,
+    );
     if (exists) {
-      res.status(409).send({ error: 'ShoppingList with the same name already exists' });
+      res
+        .status(409)
+        .send({ error: 'ShoppingList with the same name already exists' });
       return;
     }
 
-    const createdShoppingList = await this.shoppingListsRepository.createShoppingList(validatedData);
+    const createdShoppingList =
+      await this.shoppingListsRepository.createShoppingList(validatedData);
     if (createdShoppingList === null) {
       res.status(400).send({ error: 'Error creating shopping list' });
       return;
     }
 
-    const itemsWithName: { name: string; description?: string; quantity?: number }[] = [];
+    const itemsWithName: {
+      name: string;
+      description?: string;
+      quantity?: number;
+    }[] = [];
     const itemsWithId: { id: string; quantity?: number }[] = [];
 
     if (validatedData.items) {
@@ -99,7 +110,7 @@ export class ShoppingListsController {
   }
 
   async deleteShoppingList(req: Request, res: Response): Promise<void> {
-    if(!isUUID(req.params.id)) {
+    if (!isUUID(req.params.id)) {
       res.status(400).send({ error: 'Invalid UUID' });
       return;
     }
@@ -115,22 +126,29 @@ export class ShoppingListsController {
   }
 
   async updateShoppingList(req: Request, res: Response): Promise<void> {
-    if(!isUUID(req.params.id)) {
+    if (!isUUID(req.params.id)) {
       res.status(400).send({ error: 'Invalid UUID' });
       return;
     }
-      const validatedData = updateShoppingListZodSchema.parse(req.body);
-      const updatedShoppingList = await this.shoppingListsRepository.updateShoppingList(req.params.id, validatedData);
+    const validatedData = updateShoppingListZodSchema.parse(req.body);
+    const updatedShoppingList =
+      await this.shoppingListsRepository.updateShoppingList(
+        req.params.id,
+        validatedData,
+      );
 
-      if(updatedShoppingList === null) {
-        res.status(404).send({ error: 'ShoppingList not found' });
-        return;
-      }
-      res.status(200).send(updatedShoppingList);
+    if (updatedShoppingList === null) {
+      res.status(404).send({ error: 'ShoppingList not found' });
+      return;
+    }
+    res.status(200).send(updatedShoppingList);
   }
 
-  async associateItemsWithShoppingList(req: Request, res: Response): Promise<void> {
-    if(!isUUID(req.params.id)) {
+  async associateItemsWithShoppingList(
+    req: Request,
+    res: Response,
+  ): Promise<void> {
+    if (!isUUID(req.params.id)) {
       res.status(400).send({ error: 'Invalid UUID' });
       return;
     }
@@ -160,8 +178,12 @@ export class ShoppingListsController {
       }
     }
 
-    const result = await this.shoppingListsRepository.associateItemsWithShoppingList(req.params.id, items);
-    if(result === null) {
+    const result =
+      await this.shoppingListsRepository.associateItemsWithShoppingList(
+        req.params.id,
+        items,
+      );
+    if (result === null) {
       res.status(404).send({ error: 'ShoppingList not found' });
       return;
     }
@@ -169,28 +191,34 @@ export class ShoppingListsController {
   }
 
   async removeItemFromShoppingList(req: Request, res: Response): Promise<void> {
-    if(!isUUID(req.params.id) || !isUUID(req.params.itemId)) {
+    if (!isUUID(req.params.id) || !isUUID(req.params.itemId)) {
       res.status(400).send({ error: 'Invalid UUID' });
       return;
     }
     const { id, itemId } = req.params;
-    const result = await this.shoppingListsRepository.removeItemFromShoppingList(id, itemId);
+    const result =
+      await this.shoppingListsRepository.removeItemFromShoppingList(id, itemId);
     if (result === null) {
       res.status(404).send({ error: 'Item or Shopping List not found' });
-      return
+      return;
     }
     res.status(204).send();
   }
 
   async updateShoppingListItems(req: Request, res: Response): Promise<void> {
-    if(!isUUID(req.params.id) || !isUUID(req.params.itemId)) {
+    if (!isUUID(req.params.id) || !isUUID(req.params.itemId)) {
       res.status(400).send({ error: 'Invalid UUID' });
       return;
     }
     const { id, itemId } = req.params;
     const { quantity, is_purchased } = req.body;
-    const answer = await this.shoppingListsRepository.updateShoppingListItems(id, itemId, quantity, is_purchased);
-    if(answer === null) {
+    const answer = await this.shoppingListsRepository.updateShoppingListItems(
+      id,
+      itemId,
+      quantity,
+      is_purchased,
+    );
+    if (answer === null) {
       res.status(400).send('Quantity must be greater than 0');
       return;
     }
@@ -198,7 +226,7 @@ export class ShoppingListsController {
   }
 
   async getShoppingListItems(req: Request, res: Response): Promise<void> {
-    if(!isUUID(req.params.id)) {
+    if (!isUUID(req.params.id)) {
       res.status(400).send({ error: 'Invalid UUID' });
       return;
     }
@@ -214,14 +242,18 @@ export class ShoppingListsController {
   async searchShoppingLists(req: Request, res: Response): Promise<void> {
     const { query } = req.query;
     if (typeof query !== 'string') {
-      res.status(400).send({ error: 'Query parameter is required and must be a string' });
+      res
+        .status(400)
+        .send({ error: 'Query parameter is required and must be a string' });
       return;
-    } else if(query.trim() === '') { // Check if query is empty and return an empty array
+    } else if (query.trim() === '') {
+      // Check if query is empty and return an empty array
       res.status(200).send([]);
       return;
     }
 
-    const results = await this.shoppingListsRepository.searchShoppingLists(query);
+    const results =
+      await this.shoppingListsRepository.searchShoppingLists(query);
     res.send(results);
   }
 
@@ -239,7 +271,8 @@ export class ShoppingListsController {
       return;
     }
 
-    const results = await this.shoppingListsRepository.searchShoppingListsByItem(id);
+    const results =
+      await this.shoppingListsRepository.searchShoppingListsByItem(id);
     if (results.length === 0) {
       res.status(404).send({ error: 'No shopping lists found for this item' });
       return;
@@ -249,12 +282,13 @@ export class ShoppingListsController {
   }
 
   async getShoppingListStore(req: Request, res: Response): Promise<void> {
-    if(!isUUID(req.params.id)) {
+    if (!isUUID(req.params.id)) {
       res.status(400).send({ error: 'Invalid UUID' });
       return;
     }
     const { id } = req.params;
-    const shoppingList = await this.shoppingListsRepository.getShoppingListStore(id);
+    const shoppingList =
+      await this.shoppingListsRepository.getShoppingListStore(id);
     if (shoppingList === null) {
       res.status(404).send({ error: 'ShoppingList not found' });
       return;
@@ -263,13 +297,16 @@ export class ShoppingListsController {
   }
 
   async setShoppingListStore(req: Request, res: Response): Promise<void> {
-    if(!isUUID(req.params.id)) {
+    if (!isUUID(req.params.id)) {
       res.status(400).send({ error: 'Invalid UUID' });
       return;
     }
     const { id } = req.params;
     const { store } = req.body;
-    const result = await this.shoppingListsRepository.setShoppingListStore(id, store);
+    const result = await this.shoppingListsRepository.setShoppingListStore(
+      id,
+      store,
+    );
     if (result === null) {
       res.status(404).send({ error: 'ShoppingList not found' });
       return;
@@ -280,26 +317,34 @@ export class ShoppingListsController {
   async getShoppingListsByStore(req: Request, res: Response): Promise<void> {
     const { store } = req.query;
     if (typeof store !== 'string') {
-      res.status(400).send({ error: 'Store query parameter is required and must be a string' });
+      res.status(400).send({
+        error: 'Store query parameter is required and must be a string',
+      });
       return;
-    } else if(store.trim() === '') { // Check if store is empty and return an empty array
+    } else if (store.trim() === '') {
+      // Check if store is empty and return an empty array
       res.status(200).send([]);
       return;
     }
 
-    const results = await this.shoppingListsRepository.getShoppingListsByStore(store);
+    const results =
+      await this.shoppingListsRepository.getShoppingListsByStore(store);
     res.send(results);
   }
 
   async lookupProductByBarcode(req: Request, res: Response): Promise<void> {
     const { barcode } = req.query;
     if (typeof barcode !== 'string') {
-      res.status(400).send({ error: 'Barcode query parameter is required and must be a string' });
+      res.status(400).send({
+        error: 'Barcode query parameter is required and must be a string',
+      });
       return;
     }
 
     try {
-      const response = await fetch(`https://world.openfoodfacts.org/api/v0/product/${barcode}.json`);
+      const response = await fetch(
+        `https://world.openfoodfacts.org/api/v0/product/${barcode}.json`,
+      );
       const data = await response.json();
 
       if (data.status === 1) {
